intel/bench_214_new/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main/log.txt
bench_214_new/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:34:33: error: use of undeclared identifier 'NULL'
        struct tc_configuration *src = NULL;
                                       ^
bench_214_new/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main/extr_.linuxdriversnetethernetintelixgbeixgbe_dcb_nl.c_ixgbe_copy_dcb_cfg_with_main.c:35:33: error: use of undeclared identifier 'NULL'
        struct tc_configuration *dst = NULL;
                                       ^
2 errors generated.
HLS FPGA Parse FAILED.
